fix #135 Deleting Breakconditions is Broken in Chrome and Firefox

--- a/src/main/resources/web-data/css/main.css
+++ b/src/main/resources/web-data/css/main.css
@@ -409,7 +409,6 @@ a, a:visited {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #bbb;
-  z-index: -1;
 }
 #gc_conditionList .condition.none {
   text-align: center;
